# GroupButler2

./: pyproject.toml
groupbutler/: __main__.py  api.py  config.py  language.py  main.py  message.py  plugin.py  storage.py
groupbutler/plugins/: pins.py
