[tool.poetry]
name = "groupbutler"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.5"
prometheus-client = "^0.5.0"
aiohttp = "^3.4"
contextvars = "^2.3"
aioredis = "^1.2"
prometheus_async = "^18.4"
babel = "^2.6"

[tool.poetry.dev-dependencies]
pylint = "^2.2"
